--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.8",
+    "slate-editor": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
